Update and rename Comprino round 2.ipynb to round_2_interview.ipynb

--- a/round_2_interview.ipynb
+++ b/round_2_interview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Comprino Technologies Round 2 </h2>\n",
+    "<h2> Round 2 </h2>\n",
     "\n",
     "<h4> Live coding session </h4>"
    ]
